# adk-agentic-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
chart_agent/: agent.py  tools.py
genie_agent/: agent.py
